--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Mentally">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
-    <title>Softy Pinko - Bootstrap 4.0 Theme</title>
+    <title>Mentally</title>
 <!--
 SOFTY PINKO
 https://templatemo.com/tm-535-softy-pinko
@@ -45,14 +45,14 @@ https://templatemo.com/tm-535-softy-pinko
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="#" class="logo">
-                            <img src="assets/images/logo.png" alt="Softy Pinko"/>
+                            <img src="assets/images/mentally-img.jpg" width="50" height="50" alt="Mentally"/>
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li><a href="#welcome" class="active">Home</a></li>
                             <li><a href="#features">About</a></li>
-                            <li><a href="#work-process">Work Process</a></li>
+                            <li><a href="#work-process">Onboarding Process</a></li>
                             <li><a href="#testimonials">Testimonials</a></li>
                             <li><a href="#pricing-plans">Pricing Tables</a></li>
                             <li><a href="#blog">Blog Entries</a></li>
@@ -77,9 +77,8 @@ https://templatemo.com/tm-535-softy-pinko
             <div class="container">
                 <div class="row">
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
-                        <h1>We provide the best <strong>strategy</strong><br>to grow up your <strong>business</strong></h1>
-                        <p>Softy Pinko is a professional Bootstrap 4.0 theme designed by Template Mo 
-                        for your company at absolutely free of charge</p>
+                        <h1>We provide the best <strong>support</strong><br>to help your <strong>life</strong></h1>
+                        <p>Yolo</p>
                         <a href="#features" class="main-button-slider">Discover More</a>
                     </div>
                 </div>
@@ -101,8 +100,8 @@ https://templatemo.com/tm-535-softy-pinko
                                 <div class="icon">
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
-                                <h5 class="features-title">Modern Strategy</h5>
-                                <p>Customize anything in this template to fit your website needs</p>
+                                <h5 class="features-title">Modern Approach</h5>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt hic optio corrupti architecto doloribus reprehenderit mollitia impedit explicabo beatae molestias, molestiae blanditiis expedita vitae voluptas maiores, libero deleniti nam eos.</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -114,7 +113,7 @@ https://templatemo.com/tm-535-softy-pinko
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
                                 <h5 class="features-title">Best Relationship</h5>
-                                <p>Contact us immediately if you have a question in mind</p>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsam consequatur reprehenderit suscipit. Vitae nulla laborum, soluta, quae tenetur laboriosam temporibus, voluptates consectetur quod blanditiis cum ratione aut eveniet assumenda.</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -125,8 +124,8 @@ https://templatemo.com/tm-535-softy-pinko
                                 <div class="icon">
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
-                                <h5 class="features-title">Ultimate Marketing</h5>
-                                <p>You just need to tell your friends about our free templates</p>
+                                <h5 class="features-title">Ultimate results</h5>
+                                <p>You just need to tell your friends about it</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
