--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
-    <title>Softy Pinko - Bootstrap 4.0 Theme</title>
+    <title>Mentally</title>
 <!--
 SOFTY PINKO
 https://templatemo.com/tm-535-softy-pinko
@@ -83,14 +83,14 @@ https://templatemo.com/tm-535-softy-pinko
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="#" class="logo">
-                            <img src="assets/images/logo.png" alt="Softy Pinko"/>
+                            <img src="assets/images/mentally-logo.png" width="50" height="50" alt="Softy Pinko"/>
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li><a href="#welcome" class="active">Home</a></li>
                             <li><a href="#features">About</a></li>
-                            <li><a href="#work-process">Work Process</a></li>
+                            <li><a href="#work-process">Onboarding Process</a></li>
                             <li><a href="#testimonials">Testimonials</a></li>
                             <li><a href="#pricing-plans">Pricing Tables</a></li>
                             <li><a href="#blog">Blog Entries</a></li>
@@ -115,9 +115,8 @@ https://templatemo.com/tm-535-softy-pinko
             <div class="container">
                 <div class="row">
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
-                        <h1>We provide the best <strong>strategy</strong><br>to grow up your <strong>business</strong></h1>
-                        <p>Softy Pinko is a professional Bootstrap 4.0 theme designed by Template Mo 
-                        for your company at absolutely free of charge</p>
+                        <h1>We provide the best <strong>support</strong><br>to help your <strong>life</strong></h1>
+                        <p>yolo</p>
                         <a href="#features" class="main-button-slider">Discover More</a>
                     </div>
                 </div>
@@ -139,8 +138,8 @@ https://templatemo.com/tm-535-softy-pinko
                                 <div class="icon">
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
-                                <h5 class="features-title">Modern Strategy</h5>
-                                <p>Customize anything in this template to fit your website needs</p>
+                                <h5 class="features-title">Modern Approach</h5>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis blanditiis mollitia obcaecati esse nam nemo, quidem architecto ipsa aliquam. Quis hic quos aperiam laboriosam vero, dolores iusto debitis sed et!</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -152,7 +151,7 @@ https://templatemo.com/tm-535-softy-pinko
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
                                 <h5 class="features-title">Best Relationship</h5>
-                                <p>Contact us immediately if you have a question in mind</p>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, tempore. Libero, cupiditate repudiandae tempora nisi quidem aliquam ratione reprehenderit accusantium unde, sunt iste, necessitatibus maxime! Repellat adipisci dolorem at quis.</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -163,8 +162,8 @@ https://templatemo.com/tm-535-softy-pinko
                                 <div class="icon">
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
-                                <h5 class="features-title">Ultimate Marketing</h5>
-                                <p>You just need to tell your friends about our free templates</p>
+                                <h5 class="features-title">Ultimate Results</h5>
+                                <p>You just need to tell your friends about it</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -194,7 +193,7 @@ https://templatemo.com/tm-535-softy-pinko
             class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
           >
             <div class="left-heading">
-              <h2 class="section-title">Let’s discuss about you project</h2>
+              <h2 class="section-title">Let’s discuss about your goals</h2>
             </div>
             <div class="left-text">
               <p>
@@ -223,7 +222,7 @@ https://templatemo.com/tm-535-softy-pinko
           >
             <div class="left-heading">
               <h2 class="section-title">
-                We can help you to grow your business
+                We can help you to elevate yourself
               </h2>
             </div>
             <div class="left-text">
@@ -258,7 +257,7 @@ https://templatemo.com/tm-535-softy-pinko
           <div class="row">
             <div class="offset-lg-3 col-lg-6">
               <div class="info">
-                <h1>Work Process</h1>
+                <h1>Onboarding Process</h1>
                 <p>
                   Aenean nec tempor metus. Maecenas ligula dolor, commodo in
                   imperdiet interdum, vehicula ut ex. Donec ante diam.
@@ -274,7 +273,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <i
                   ><img src="assets/images/work-process-item-01.png" alt=""
                 /></i>
-                <strong>Get Ideas</strong>
+                <strong>Sign up</strong>
                 <span>Godard pabst prism fam cliche.</span>
               </a>
             </div>
@@ -283,7 +282,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <i
                   ><img src="assets/images/work-process-item-01.png" alt=""
                 /></i>
-                <strong>Sketch Up</strong>
+                <strong>Answers</strong>
                 <span>Godard pabst prism fam cliche.</span>
               </a>
             </div>
@@ -319,13 +318,16 @@ https://templatemo.com/tm-535-softy-pinko
                 <i
                   ><img src="assets/images/work-process-item-01.png" alt=""
                 /></i>
-                <strong>Launch</strong>
+                <strong>Match</strong>
                 <span>Godard pabst prism fam cliche.</span>
               </a>
             </div>
           </div>
           <!-- ***** Mini Box End ***** -->
         </div>
+        <div class="text-center mt-5">
+            <a href="#" class="main-button">Let´s get started!</a>
+          </div>
       </div>
     </section>
     <!-- ***** Home Parallax End ***** -->
