Create onboarding pages.

--- a/index.html
+++ b/index.html
@@ -40,14 +40,20 @@
     />
     <meta name="theme-color" content="#ffffff" />
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900"
+      rel="stylesheet"
+    />
 
     <title>Mentally</title>
-<!--
+    <!--
 SOFTY PINKO
 https://templatemo.com/tm-535-softy-pinko
 -->
@@ -77,100 +83,135 @@ https://templatemo.com/tm-535-softy-pinko
 
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <nav class="main-nav">
-                        <!-- ***** Logo Start ***** -->
-                        <a href="#" class="logo">
-                            <img src="assets/images/mentally-logo.png" width="50" height="50" alt="Softy Pinko"/>
-                        </a>
-                        <!-- ***** Logo End ***** -->
-                        <!-- ***** Menu Start ***** -->
-                        <ul class="nav">
-                            <li><a href="#welcome" class="active">Home</a></li>
-                            <li><a href="#features">About</a></li>
-                            <li><a href="#work-process">Onboarding Process</a></li>
-                            <li><a href="#testimonials">Testimonials</a></li>
-                            <li><a href="#pricing-plans">Pricing Tables</a></li>
-                            <li><a href="#blog">Blog Entries</a></li>
-                            <li><a href="#contact-us">Contact Us</a></li>
-                        </ul>
-                        <a class='menu-trigger'>
-                            <span>Menu</span>
-                        </a>
-                        <!-- ***** Menu End ***** -->
-                    </nav>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav class="main-nav">
+              <!-- ***** Logo Start ***** -->
+              <a href="#" class="logo">
+                <img
+                  src="assets/images/mentally-logo.png"
+                  width="50"
+                  height="50"
+                  alt="Softy Pinko"
+                />
+              </a>
+              <!-- ***** Logo End ***** -->
+              <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+                <li><a href="#welcome" class="active">Home</a></li>
+                <li><a href="#features">About</a></li>
+                <li><a href="#work-process">Onboarding Process</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#pricing-plans">Pricing Tables</a></li>
+                <li><a href="#blog">Blog Entries</a></li>
+                <li><a href="#contact-us">Contact Us</a></li>
+              </ul>
+              <a class="menu-trigger">
+                <span>Menu</span>
+              </a>
+              <!-- ***** Menu End ***** -->
+            </nav>
+          </div>
         </div>
+      </div>
     </header>
     <!-- ***** Header Area End ***** -->
 
     <!-- ***** Welcome Area Start ***** -->
     <div class="welcome-area" id="welcome">
-
-        <!-- ***** Header Text Start ***** -->
-        <div class="header-text">
-            <div class="container">
-                <div class="row">
-                    <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
-                        <h1>We provide the best <strong>support</strong><br>to help your <strong>life</strong></h1>
-                        <p>yolo</p>
-                        <a href="#features" class="main-button-slider">Discover More</a>
-                    </div>
-                </div>
+      <!-- ***** Header Text Start ***** -->
+      <div class="header-text">
+        <div class="container">
+          <div class="row">
+            <div
+              class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12"
+            >
+              <h1>
+                We provide the best <strong>support</strong><br />to help your
+                <strong>life</strong>
+              </h1>
+              <p>yolo</p>
+              <a href="#features" class="main-button-slider">Discover More</a>
             </div>
+          </div>
         </div>
-        <!-- ***** Header Text End ***** -->
+      </div>
+      <!-- ***** Header Text End ***** -->
     </div>
     <!-- ***** Welcome Area End ***** -->
 
     <!-- ***** Features Small Start ***** -->
     <section class="section home-feature">
-        <div class="container">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="row">
-                        <!-- ***** Features Small Item Start ***** -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s">
-                            <div class="features-small-item">
-                                <div class="icon">
-                                    <i><img src="assets/images/featured-item-01.png" alt=""></i>
-                                </div>
-                                <h5 class="features-title">Modern Approach</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis blanditiis mollitia obcaecati esse nam nemo, quidem architecto ipsa aliquam. Quis hic quos aperiam laboriosam vero, dolores iusto debitis sed et!</p>
-                            </div>
-                        </div>
-                        <!-- ***** Features Small Item End ***** -->
-
-                        <!-- ***** Features Small Item Start ***** -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
-                            <div class="features-small-item">
-                                <div class="icon">
-                                    <i><img src="assets/images/featured-item-01.png" alt=""></i>
-                                </div>
-                                <h5 class="features-title">Best Relationship</h5>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, tempore. Libero, cupiditate repudiandae tempora nisi quidem aliquam ratione reprehenderit accusantium unde, sunt iste, necessitatibus maxime! Repellat adipisci dolorem at quis.</p>
-                            </div>
-                        </div>
-                        <!-- ***** Features Small Item End ***** -->
-
-                        <!-- ***** Features Small Item Start ***** -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
-                            <div class="features-small-item">
-                                <div class="icon">
-                                    <i><img src="assets/images/featured-item-01.png" alt=""></i>
-                                </div>
-                                <h5 class="features-title">Ultimate Results</h5>
-                                <p>You just need to tell your friends about it</p>
-                            </div>
-                        </div>
-                        <!-- ***** Features Small Item End ***** -->
-                    </div>
+              <!-- ***** Features Small Item Start ***** -->
+              <div
+                class="col-lg-4 col-md-6 col-sm-6 col-12"
+                data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
+              >
+                <div class="features-small-item">
+                  <div class="icon">
+                    <i
+                      ><img src="assets/images/featured-item-01.png" alt=""
+                    /></i>
+                  </div>
+                  <h5 class="features-title">Modern Approach</h5>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Nobis blanditiis mollitia obcaecati esse nam nemo, quidem
+                    architecto ipsa aliquam. Quis hic quos aperiam laboriosam
+                    vero, dolores iusto debitis sed et!
+                  </p>
                 </div>
+              </div>
+              <!-- ***** Features Small Item End ***** -->
+
+              <!-- ***** Features Small Item Start ***** -->
+              <div
+                class="col-lg-4 col-md-6 col-sm-6 col-12"
+                data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s"
+              >
+                <div class="features-small-item">
+                  <div class="icon">
+                    <i
+                      ><img src="assets/images/featured-item-01.png" alt=""
+                    /></i>
+                  </div>
+                  <h5 class="features-title">Best Relationship</h5>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Nam, tempore. Libero, cupiditate repudiandae tempora nisi
+                    quidem aliquam ratione reprehenderit accusantium unde, sunt
+                    iste, necessitatibus maxime! Repellat adipisci dolorem at
+                    quis.
+                  </p>
+                </div>
+              </div>
+              <!-- ***** Features Small Item End ***** -->
+
+              <!-- ***** Features Small Item Start ***** -->
+              <div
+                class="col-lg-4 col-md-6 col-sm-6 col-12"
+                data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s"
+              >
+                <div class="features-small-item">
+                  <div class="icon">
+                    <i
+                      ><img src="assets/images/featured-item-01.png" alt=""
+                    /></i>
+                  </div>
+                  <h5 class="features-title">Ultimate Results</h5>
+                  <p>You just need to tell your friends about it</p>
+                </div>
+              </div>
+              <!-- ***** Features Small Item End ***** -->
             </div>
+          </div>
         </div>
+      </div>
     </section>
     <!-- ***** Features Small End ***** -->
 
@@ -221,9 +262,7 @@ https://templatemo.com/tm-535-softy-pinko
             class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
           >
             <div class="left-heading">
-              <h2 class="section-title">
-                We can help you to elevate yourself
-              </h2>
+              <h2 class="section-title">We can help you to elevate yourself</h2>
             </div>
             <div class="left-text">
               <p>
@@ -326,8 +365,8 @@ https://templatemo.com/tm-535-softy-pinko
           <!-- ***** Mini Box End ***** -->
         </div>
         <div class="text-center mt-5">
-            <a href="#" class="main-button">Let´s get started!</a>
-          </div>
+          <a href="./onboarding" class="main-button">Let´s get started!</a>
+        </div>
       </div>
     </section>
     <!-- ***** Home Parallax End ***** -->
