--- a/onboarding.html
+++ b/onboarding.html
@@ -40,14 +40,20 @@
     />
     <meta name="theme-color" content="#ffffff" />
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
-    <link href="./assets/css/custom.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900"
+      rel="stylesheet"
+    />
+    <link href="./assets/css/custom.css" rel="stylesheet" />
     <title>Mentally</title>
-<!--
+    <!--
 SOFTY PINKO
 https://templatemo.com/tm-535-softy-pinko
 -->
@@ -62,6 +68,7 @@ https://templatemo.com/tm-535-softy-pinko
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css" />
 
     <link rel="stylesheet" href="assets/css/templatemo-softy-pinko.css" />
+    <script src="./assets/js/onboarding.js" defer></script>
   </head>
 
   <body>
@@ -77,75 +84,225 @@ https://templatemo.com/tm-535-softy-pinko
 
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <nav class="main-nav">
-                        <!-- ***** Logo Start ***** -->
-                        <a href="#" class="logo">
-                            <img src="assets/images/mentally-logo.png" width="50" height="50" alt="Softy Pinko"/>
-                        </a>
-                        <!-- ***** Logo End ***** -->
-                        <!-- ***** Menu Start ***** -->
-                        <ul class="nav">
-                            <li><a href="#welcome" class="active">Home</a></li>
-                            <li><a href="#features">About</a></li>
-                            <li><a href="#work-process">Onboarding Process</a></li>
-                            <li><a href="#testimonials">Testimonials</a></li>
-                            <li><a href="#pricing-plans">Pricing Tables</a></li>
-                            <li><a href="#blog">Blog Entries</a></li>
-                            <li><a href="#contact-us">Contact Us</a></li>
-                        </ul>
-                        <a class='menu-trigger'>
-                            <span>Menu</span>
-                        </a>
-                        <!-- ***** Menu End ***** -->
-                    </nav>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav class="main-nav">
+              <!-- ***** Logo Start ***** -->
+              <a href="#" class="logo">
+                <img
+                  src="assets/images/mentally-logo.png"
+                  width="50"
+                  height="50"
+                  alt="Softy Pinko"
+                />
+              </a>
+              <!-- ***** Logo End ***** -->
+              <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+                <li><a href="#welcome" class="active">Home</a></li>
+                <li><a href="#features">About</a></li>
+                <li><a href="#work-process">Onboarding Process</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#pricing-plans">Pricing Tables</a></li>
+                <li><a href="#blog">Blog Entries</a></li>
+                <li><a href="#contact-us">Contact Us</a></li>
+              </ul>
+              <a class="menu-trigger">
+                <span>Menu</span>
+              </a>
+              <!-- ***** Menu End ***** -->
+            </nav>
+          </div>
         </div>
+      </div>
     </header>
     <!-- ***** Header Area End ***** -->
 
-    <!-- ***** sign up section ***** -->
-    <div class="container onboarding">
-      <div class="row">
-        <div class="col-lg-12">
-          <h2 class="section-title text-center">Sign Up</h2><br>
+    <main>
+      <!-- ***** sign up section ***** -->
+      <div class="container onboarding">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 class="section-title text-center">Sign Up</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 offset-lg-3">
+            <div>
+              <div class="form-group">
+                <label for="name">Full Name</label>
+                <input
+                  type="text"
+                  id="name"
+                  name="name"
+                  class="form-control"
+                  required
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="email">Email Address</label>
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  class="form-control"
+                  required
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input
+                  type="password"
+                  id="password"
+                  name="password"
+                  class="form-control"
+                  required
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="confirm-password">Confirm Password</label>
+                <input
+                  type="password"
+                  id="confirm-password"
+                  name="confirm-password"
+                  class="form-control"
+                  required
+                />
+              </div>
+
+              <div class="form-group text-center">
+                <button type="submit" class="main-button button-sign-up">
+                  Sign Up
+                </button>
+              </div>
+            </div>
+            <p class="text-center">
+              Already have an account? <a href="signin.html">Sign in</a>
+            </p>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-6 offset-lg-3">
-          <form action="signup.php" method="POST">
-            <div class="form-group">
-              <label for="name">Full Name</label>
-              <input type="text" id="name" name="name" class="form-control" required>
-            </div>
-  
-            <div class="form-group">
-              <label for="email">Email Address</label>
-              <input type="email" id="email" name="email" class="form-control" required>
-            </div>
-  
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" id="password" name="password" class="form-control" required>
-            </div>
-  
-            <div class="form-group">
-              <label for="confirm-password">Confirm Password</label>
-              <input type="password" id="confirm-password" name="confirm-password" class="form-control" required>
-            </div>
-  
-            <div class="form-group text-center">
-              <button type="submit" class="main-button">Sign Up</button>
-            </div>
-          </form>
-          <p class="text-center">Already have an account? <a href="signin.html">Sign in</a></p>
+
+      <div class="onboarding-question onboarding-question-1 hidden">
+        <label for="cars">What is your answer to question 1?</label>
+
+        <br />
+
+        <select name="cars" id="cars">
+          <br />
+          <option value="volvo">Volvo</option>
+          <option value="saab">Saab</option>
+          <option value="mercedes">Mercedes</option>
+          <option value="audi">Audi</option>
+        </select>
+
+        <div class="form-group text-center">
+          <button
+            type="submit"
+            class="main-button button-onboarding button-onboarding-1"
+          >
+            Next
+          </button>
         </div>
       </div>
-    </div>
-  
+
+      <div class="onboarding-question onboarding-question-2 hidden">
+        <label for="cars">What is your answer to question 2?</label>
+
+        <br />
+
+        <select name="cars" id="cars">
+          <br />
+          <option value="volvo">Volvo</option>
+          <option value="saab">Saab</option>
+          <option value="mercedes">Mercedes</option>
+          <option value="audi">Audi</option>
+        </select>
+
+        <div class="form-group text-center">
+          <button
+            type="submit"
+            class="main-button button-onboarding button-onboarding-2"
+          >
+            Next
+          </button>
+        </div>
+      </div>
+
+      <div class="onboarding-question onboarding-question-3 hidden">
+        <label for="cars">What is your answer to question 3?</label>
+
+        <br />
+
+        <select name="cars" id="cars">
+          <br />
+          <option value="volvo">Volvo</option>
+          <option value="saab">Saab</option>
+          <option value="mercedes">Mercedes</option>
+          <option value="audi">Audi</option>
+        </select>
+
+        <div class="form-group text-center">
+          <button
+            type="submit"
+            class="main-button button-onboarding button-onboarding-3"
+          >
+            Next
+          </button>
+        </div>
+      </div>
+
+      <div class="onboarding-question onboarding-question-4 hidden">
+        <label for="cars">What is your answer to question 4?</label>
+
+        <br />
+
+        <select name="cars" id="cars">
+          <br />
+          <option value="volvo">Volvo</option>
+          <option value="saab">Saab</option>
+          <option value="mercedes">Mercedes</option>
+          <option value="audi">Audi</option>
+        </select>
+
+        <div class="form-group text-center">
+          <button
+            type="submit"
+            class="main-button button-onboarding button-onboarding-4"
+          >
+            Next
+          </button>
+        </div>
+      </div>
+
+      <div class="onboarding-question onboarding-question-5 hidden">
+        <label for="cars">What is your answer to question 5?</label>
+
+        <br />
+
+        <select name="cars" id="cars">
+          <br />
+          <option value="volvo">Volvo</option>
+          <option value="saab">Saab</option>
+          <option value="mercedes">Mercedes</option>
+          <option value="audi">Audi</option>
+        </select>
+
+        <div class="form-group text-center">
+          <button
+            type="submit"
+            class="main-button button-onboarding button-onboarding-5"
+          >
+            Next
+          </button>
+        </div>
+      </div>
+    </main>
+
     <!-- JavaScript -->
     <script src="assets/js/jquery-2.1.0.min.js"></script>
     <script src="assets/js/popper.js"></script>
@@ -157,9 +314,6 @@ https://templatemo.com/tm-535-softy-pinko
     <script src="assets/js/custom.js"></script>
 
     <!-- ***** sign up end ***** -->
-
-
-
 
     <!-- ***** Footer Start ***** -->
     <footer>
