Edit onboarding select.

--- a/index.html
+++ b/index.html
@@ -365,7 +365,9 @@ https://templatemo.com/tm-535-softy-pinko
           <!-- ***** Mini Box End ***** -->
         </div>
         <div class="text-center mt-5">
-          <a href="./onboarding" class="main-button">Let´s get started!</a>
+          <a href="./onboarding" class="main-button-slider"
+            >Let´s get started!</a
+          >
         </div>
       </div>
     </section>
