--- a/onboarding.html
+++ b/onboarding.html
@@ -187,26 +187,28 @@ https://templatemo.com/tm-535-softy-pinko
         </div>
       </div>
 
-      <div class="onboarding-question onboarding-question-1 hidden">
-        <label for="cars">What is your answer to question 1?</label>
+      <div class="form-group">
+        <div class="onboarding-question onboarding-question-1 hidden">
+          <label for="cars">What is your answer to question 1?</label>
 
-        <br />
-
-        <select name="cars" id="cars">
           <br />
-          <option value="volvo">Volvo</option>
-          <option value="saab">Saab</option>
-          <option value="mercedes">Mercedes</option>
-          <option value="audi">Audi</option>
-        </select>
 
-        <div class="form-group text-center">
-          <button
-            type="submit"
-            class="main-button button-onboarding button-onboarding-1"
-          >
-            Next
-          </button>
+          <select name="cars" id="cars" class="form-control">
+            <br />
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
+          </select>
+
+          <div class="form-group text-center">
+            <button
+              type="submit"
+              class="main-button button-onboarding button-onboarding-1"
+            >
+              Next
+            </button>
+          </div>
         </div>
       </div>
 
