--- a/onboarding.html
+++ b/onboarding.html
@@ -189,16 +189,16 @@ https://templatemo.com/tm-535-softy-pinko
 
       <div class="form-group">
         <div class="onboarding-question onboarding-question-1 hidden">
-          <label for="cars">What is your answer to question 1?</label>
+          <label for="cars">How would you describe your current mental state and emotional well-being?</label>
 
           <br />
 
           <select name="cars" id="cars" class="form-control">
             <br />
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="mercedes">Mercedes</option>
-            <option value="audi">Audi</option>
+            <option value="volvo">Excellent</option>
+            <option value="saab">Good</option>
+            <option value="mercedes">Fair</option>
+            <option value="audi">Poor</option>
           </select>
 
           <div class="form-group text-center">
@@ -211,96 +211,222 @@ https://templatemo.com/tm-535-softy-pinko
           </div>
         </div>
       </div>
+      <div class="form-group">
+        <div class="onboarding-question onboarding-question-2 hidden">
+          <label for="cars">Have you ever received any form of psychological or counseling services in the past?</label>
 
-      <div class="onboarding-question onboarding-question-2 hidden">
-        <label for="cars">What is your answer to question 2?</label>
-
-        <br />
-
-        <select name="cars" id="cars">
           <br />
-          <option value="volvo">Volvo</option>
-          <option value="saab">Saab</option>
-          <option value="mercedes">Mercedes</option>
-          <option value="audi">Audi</option>
-        </select>
 
-        <div class="form-group text-center">
-          <button
-            type="submit"
-            class="main-button button-onboarding button-onboarding-2"
-          >
-            Next
-          </button>
+          <select name="cars" id="cars" class="form-control">
+            <br />
+            <option value="volvo">Yes, briefly</option>
+            <option value="saab">Yes, for an extended period</option>
+            <option value="mercedes">No</option>
+          </select>
+
+          <div class="form-group text-center">
+            <button
+              type="submit"
+              class="main-button button-onboarding button-onboarding-2"
+            >
+              Next
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="onboarding-question onboarding-question-3 hidden">
+          <label for="cars">Are you currently taking any medications or receiving treatment for a mental health condition?</label>
+
+          <br />
+
+          <select name="cars" id="cars" class="form-control">
+            <br />
+            <option value="volvo">Yes, medication</option>
+            <option value="saab">Yes, therapy/counseling</option>
+            <option value="mercedes">Yes, both</option>
+            <option value="audi">No</option>
+          </select>
+
+          <div class="form-group text-center">
+            <button
+              type="submit"
+              class="main-button button-onboarding button-onboarding-3"
+            >
+              Next
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="onboarding-question onboarding-question-4 hidden">
+          <label for="cars">Do you have any specific goals or expectations for this onboarding process? What would you like to achieve through our services?</label>
+
+          <br />
+
+          <select name="cars" id="cars" class="form-control">
+            <br />
+            <option value="volvo">Managing stress and anxiety</option>
+            <option value="saab">Improving relationships</option>
+            <option value="mercedes">Overcoming past trauma</option>
+            <option value="audi">Enhancing self-esteem and confidence</option>
+            <option value="audi">Developing coping mechanisms</option>
+          </select>
+
+          <div class="form-group text-center">
+            <button
+              type="submit"
+              class="main-button button-onboarding button-onboarding-4"
+            >
+              Next
+            </button>
+          </div>
+        </div>
+      </div>
+      
+      <div class="form-group">
+        <div class="onboarding-question onboarding-question-5 hidden">
+          <label for="cars">Are there any particular challenges or issues you would like to address during your sessions with our psychologists?</label>
+
+          <br />
+
+          <select name="cars" id="cars" class="form-control">
+            <br />
+            <option value="volvo">Depression</option>
+            <option value="saab">Anxiety disorders</option>
+            <option value="mercedes">Relationship difficulties</option>
+            <option value="audi">Grief and loss</option>
+            <option value="audi">Work-related stress</option>
+            <option value="audi">Substance abuse</option>
+          </select>
+
+          <div class="form-group text-center">
+            <button
+              type="submit"
+              class="main-button button-onboarding button-onboarding-5"
+            >
+              Next
+            </button>
+          </div>
         </div>
       </div>
 
-      <div class="onboarding-question onboarding-question-3 hidden">
-        <label for="cars">What is your answer to question 3?</label>
+      <div class="form-group">
+        <div class="onboarding-question onboarding-question-6 hidden">
+          <label for="cars">Have you experienced any major life events or significant changes recently that may have impacted your mental health?</label>
 
-        <br />
-
-        <select name="cars" id="cars">
           <br />
-          <option value="volvo">Volvo</option>
-          <option value="saab">Saab</option>
-          <option value="mercedes">Mercedes</option>
-          <option value="audi">Audi</option>
-        </select>
 
-        <div class="form-group text-center">
-          <button
-            type="submit"
-            class="main-button button-onboarding button-onboarding-3"
-          >
-            Next
-          </button>
+          <select name="cars" id="cars" class="form-control">
+            <br />
+            <option value="volvo">Yes</option>
+            <option value="saab">No</option>
+          </select>
+
+          <div class="form-group text-center">
+            <button
+              type="submit"
+              class="main-button button-onboarding button-onboarding-6"
+            >
+              Next
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="onboarding-question onboarding-question-7 hidden">
+          <label for="cars">Do you have any preferences regarding the gender or background of the psychologist you will be working with?</label>
+
+          <br />
+
+          <select name="cars" id="cars" class="form-control">
+            <br />
+            <option value="volvo">Male</option>
+            <option value="saab">Female</option>
+            <option value="mercedes">No preference</option>
+          </select>
+
+          <div class="form-group text-center">
+            <button
+              type="submit"
+              class="main-button button-onboarding button-onboarding-7"
+            >
+              Next
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="onboarding-question onboarding-question-8 hidden">
+          <label for="cars">How did you hear about our psychology services and what made you decide to seek assistance at this time?</label>
+
+          <br />
+
+          <select name="cars" id="cars" class="form-control">
+            <br />
+            <option value="volvo">Online search</option>
+            <option value="saab">Referral from a healthcare professional</option>
+            <option value="mercedes">Word of mouth</option>
+            <option value="mercedes">Personal research</option>
+            <option value="mercedes">Social Network</option>
+
+          </select>
+
+          <div class="form-group text-center">
+            <button
+              type="submit"
+              class="main-button button-onboarding button-onboarding-8"
+            >
+              Next
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="onboarding-question onboarding-question-9 hidden">
+          <label for="cars">Is there any additional information or specific concerns you would like to share with us before starting the onboarding process?</label>
+
+          <br />
+
+          <select name="cars" id="cars" class="form-control">
+            <br />
+            <option value="volvo">Yes</option>
+            <option value="volvo">No</option>
+            <textarea class="form-control" id="message-9" placeholder="No, I would like also the teraphist know..." name="message" rows="4" cols="40"></textarea>
+          </select>
+
+          <div class="form-group text-center">
+            <button
+              type="submit"
+              class="main-button button-onboarding button-onboarding-9"
+            >
+              Next
+            </button>
+          </div>
         </div>
       </div>
 
-      <div class="onboarding-question onboarding-question-4 hidden">
-        <label for="cars">What is your answer to question 4?</label>
+      <div class="form-group">
+        <div class="onboarding-question onboarding-question-10 hidden">
+          <label for="cars">Are you comfortable with sharing personal and sensitive information related to your mental health during the onboarding and counseling sessions?</label>
 
-        <br />
-
-        <select name="cars" id="cars">
           <br />
-          <option value="volvo">Volvo</option>
-          <option value="saab">Saab</option>
-          <option value="mercedes">Mercedes</option>
-          <option value="audi">Audi</option>
-        </select>
 
-        <div class="form-group text-center">
-          <button
-            type="submit"
-            class="main-button button-onboarding button-onboarding-4"
-          >
-            Next
-          </button>
-        </div>
-      </div>
+          <select name="cars" id="cars" class="form-control">
+            <br />
+            <option value="volvo">Yes</option>
+            <option value="saab">No</option>
+            <textarea class="form-control" id="message-10" placeholder="No, beacuse..." name="message" rows="4" cols="40"></textarea>
+          </select>
 
-      <div class="onboarding-question onboarding-question-5 hidden">
-        <label for="cars">What is your answer to question 5?</label>
-
-        <br />
-
-        <select name="cars" id="cars">
-          <br />
-          <option value="volvo">Volvo</option>
-          <option value="saab">Saab</option>
-          <option value="mercedes">Mercedes</option>
-          <option value="audi">Audi</option>
-        </select>
-
-        <div class="form-group text-center">
-          <button
-            type="submit"
-            class="main-button button-onboarding button-onboarding-5"
-          >
-            Next
-          </button>
+          <div class="form-group text-center">
+            <button
+              type="submit"
+              class="main-button button-onboarding button-onboarding-10"
+            >
+              Next
+            </button>
+          </div>
         </div>
       </div>
     </main>
