Styled contenct homepage

--- a/index.html
+++ b/index.html
@@ -160,10 +160,7 @@ https://templatemo.com/tm-535-softy-pinko
                   </div>
                   <h5 class="features-title">Modern Approach</h5>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nobis blanditiis mollitia obcaecati esse nam nemo, quidem
-                    architecto ipsa aliquam. Quis hic quos aperiam laboriosam
-                    vero, dolores iusto debitis sed et!
+                    Our therapy center offers a collaborative and personalized approach. By building strong therapeutic relationships, we understand your unique experiences and goals. Using evidence-based techniques, we address issues like anxiety, depression, stress management, self-esteem, and relationships.
                   </p>
                 </div>
               </div>
@@ -180,13 +177,9 @@ https://templatemo.com/tm-535-softy-pinko
                       ><img src="assets/images/featured-item-01.png" alt=""
                     /></i>
                   </div>
-                  <h5 class="features-title">Best Relationship</h5>
+                  <h5 class="features-title">Optimised technology</h5>
                   <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Nam, tempore. Libero, cupiditate repudiandae tempora nisi
-                    quidem aliquam ratione reprehenderit accusantium unde, sunt
-                    iste, necessitatibus maxime! Repellat adipisci dolorem at
-                    quis.
+                    We recognize the importance of technology in your daily life. Therefore, we offer convenient online therapy sessions, allowing you to engage in therapy from the comfort of your own home or any private space. Our online platform is secure, confidential, and easy to use.
                   </p>
                 </div>
               </div>
@@ -204,7 +197,7 @@ https://templatemo.com/tm-535-softy-pinko
                     /></i>
                   </div>
                   <h5 class="features-title">Ultimate Results</h5>
-                  <p>You just need to tell your friends about it</p>
+                  <p>As a young adult, your well-being is our top priority. We're committed to helping you navigate the challenges and transitions of this phase in your life, empowering you to build resilience, find fulfillment, and create a meaningful future. Take the first step towards positive change by contacting us today to schedule a consultation.</p>
                 </div>
               </div>
               <!-- ***** Features Small Item End ***** -->
@@ -238,9 +231,7 @@ https://templatemo.com/tm-535-softy-pinko
             </div>
             <div class="left-text">
               <p>
-                Nullam sit amet purus libero. Etiam ullamcorper nisl ut augue
-                blandit, at finibus leo efficitur. Nam gravida purus non sapien
-                auctor, ut aliquam magna ullamcorper.
+                We understand that navigating life as a young adult can be challenging. Whether you're dealing with academic pressure, career choices, relationship struggles, or mental health concerns, we're here to provide the support you need. Our therapy services are specifically tailored to address the unique needs and experiences of young adults like you.
               </p>
             </div>
           </div>
@@ -266,10 +257,7 @@ https://templatemo.com/tm-535-softy-pinko
             </div>
             <div class="left-text">
               <p>
-                Aenean pretium, ipsum et porttitor auctor, metus ipsum iaculis
-                nisi, a bibendum lectus libero vitae urna. Sed id leo eu dolor
-                luctus congue sed eget ipsum. Nunc nec luctus libero. Etiam quis
-                dolor elit.
+                Remember, you don't have to face life's challenges alone. We're here to support you every step of the way on your journey to emotional well-being and personal growth.
               </p>
             </div>
           </div>
@@ -298,8 +286,7 @@ https://templatemo.com/tm-535-softy-pinko
               <div class="info">
                 <h1>Onboarding Process</h1>
                 <p>
-                  Aenean nec tempor metus. Maecenas ligula dolor, commodo in
-                  imperdiet interdum, vehicula ut ex. Donec ante diam.
+                    Through personalized consultations and evidence-based therapy sessions, our streamlined process establishes a supportive environment that empowers you to effectively work towards and achieve your goals in a collaborative and impactful manner.
                 </p>
               </div>
             </div>
@@ -308,59 +295,61 @@ https://templatemo.com/tm-535-softy-pinko
           <!-- ***** Mini Box Start ***** -->
           <div class="row">
             <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-              <a href="#" class="mini-box">
-                <i
-                  ><img src="assets/images/work-process-item-01.png" alt=""
-                /></i>
-                <strong>Sign up</strong>
-                <span>Godard pabst prism fam cliche.</span>
-              </a>
-            </div>
+                <a href="#" class="mini-box">
+                  <i
+                    ><img src="assets/images/work-process-item-01.png" alt=""
+                  /></i>
+                  <strong>Sign up</strong>
+                  <span>Begin by creating an account.</span>
+                </a>
+              </div>
             <div class="col-lg-2 col-md-3 col-sm-6 col-6">
               <a href="#" class="mini-box">
                 <i
                   ><img src="assets/images/work-process-item-01.png" alt=""
                 /></i>
-                <strong>Answers</strong>
-                <span>Godard pabst prism fam cliche.</span>
+                <strong>Questionnaire</strong>
+                <span>Share your information and needs.</span>
               </a>
             </div>
-            <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-              <a href="#" class="mini-box">
-                <i
-                  ><img src="assets/images/work-process-item-01.png" alt=""
-                /></i>
-                <strong>Discuss</strong>
-                <span>Godard pabst prism fam cliche.</span>
-              </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-              <a href="#" class="mini-box">
-                <i
-                  ><img src="assets/images/work-process-item-01.png" alt=""
-                /></i>
-                <strong>Revise</strong>
-                <span>Godard pabst prism fam cliche.</span>
-              </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-              <a href="#" class="mini-box">
-                <i
-                  ><img src="assets/images/work-process-item-01.png" alt=""
-                /></i>
-                <strong>Approve</strong>
-                <span>Godard pabst prism fam cliche.</span>
-              </a>
-            </div>
+            
+           
             <div class="col-lg-2 col-md-3 col-sm-6 col-6">
               <a href="#" class="mini-box">
                 <i
                   ><img src="assets/images/work-process-item-01.png" alt=""
                 /></i>
                 <strong>Match</strong>
-                <span>Godard pabst prism fam cliche.</span>
+                <span>Get paired with a compatible therapist.</span>
               </a>
             </div>
+            <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                <a href="#" class="mini-box">
+                  <i
+                    ><img src="assets/images/work-process-item-01.png" alt=""
+                  /></i>
+                  <strong>Consultation</strong>
+                  <span>Discuss your responses with a therapist.</span>
+                </a>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                <a href="#" class="mini-box">
+                  <i
+                    ><img src="assets/images/work-process-item-01.png" alt=""
+                  /></i>
+                  <strong>Session</strong>
+                  <span>Engage in personalized therapy.</span>
+                </a>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                <a href="#" class="mini-box">
+                  <i
+                    ><img src="assets/images/work-process-item-01.png" alt=""
+                  /></i>
+                  <strong>Progress</strong>
+                  <span>Monitor and evaluate your growth.</span>
+                </a>
+              </div>
           </div>
           <!-- ***** Mini Box End ***** -->
         </div>
@@ -386,9 +375,8 @@ https://templatemo.com/tm-535-softy-pinko
           <div class="offset-lg-3 col-lg-6">
             <div class="center-text">
               <p>
-                Donec tempus, sem non rutrum imperdiet, lectus orci fringilla
-                nulla, at accumsan elit eros a turpis. Ut sagittis lectus
-                libero.
+                Our clients are our biggest supporters.<br>
+                Here is what they say about us
               </p>
             </div>
           </div>
@@ -402,9 +390,7 @@ https://templatemo.com/tm-535-softy-pinko
               <div class="team-content">
                 <i><img src="assets/images/testimonial-icon.png" alt="" /></i>
                 <p>
-                  Proin a neque nisi. Nam ipsum nisi, venenatis ut nulla quis,
-                  egestas scelerisque orci. Maecenas a finibus odio.
-                </p>
+                    "The therapy sessions were incredibly beneficial, offering valuable guidance and support. The therapist's attentiveness and insights helped me gain new perspectives and insights into myself. I highly recommend this professional therapy service for anyone seeking positive change."</p>
                 <div class="user-image">
                   <img src="http://placehold.it/60x60" alt="" />
                 </div>
@@ -423,10 +409,7 @@ https://templatemo.com/tm-535-softy-pinko
               <div class="team-content">
                 <i><img src="assets/images/testimonial-icon.png" alt="" /></i>
                 <p>
-                  Integer molestie aliquam gravida. Nullam nec arcu finibus,
-                  imperdiet nulla vitae, placerat nibh. Cras maximus venenatis
-                  molestie.
-                </p>
+                    "The onboarding process was thorough and personalized, addressing all my concerns. The questionnaire allowed me to express myself openly, and the therapist's support made me feel heard and understood. I appreciate the progress made so far and look forward to continuing this transformative journey."</p>
                 <div class="user-image">
                   <img src="http://placehold.it/60x60" alt="" />
                 </div>
@@ -445,10 +428,7 @@ https://templatemo.com/tm-535-softy-pinko
               <div class="team-content">
                 <i><img src="assets/images/testimonial-icon.png" alt="" /></i>
                 <p>
-                  Quisque diam odio, maximus ac consectetur eu, auctor non
-                  lorem. Cras quis est non ante ultrices molestie. Ut vehicula
-                  et diam at aliquam.
-                </p>
+                    "Finding a perfect match with my therapist has been a transformative blessing. Their empathy and understanding create a safe space for exploration, fostering deep self-awareness, growth, and healing. I highly recommend this service for life-changing guidance and unwavering support."</p>
                 <div class="user-image">
                   <img src="http://placehold.it/60x60" alt="" />
                 </div>
@@ -714,9 +694,7 @@ https://templatemo.com/tm-535-softy-pinko
           <div class="offset-lg-3 col-lg-6">
             <div class="center-text">
               <p>
-                Maecenas pellentesque ante faucibus lectus vulputate
-                sollicitudin. Cras feugiat hendrerit semper.
-              </p>
+                Welcome to our Talk to Us page. We are here to listen and engage with you.  </p>
             </div>
           </div>
         </div>
@@ -727,13 +705,7 @@ https://templatemo.com/tm-535-softy-pinko
           <div class="col-lg-4 col-md-6 col-sm-12">
             <h5 class="margin-bottom-30">Keep in touch</h5>
             <div class="contact-text">
-              <p>
-                110-220 Quisque diam odio, maximus ac consectetur eu, 10260
-                <br />auctor non lorem
-              </p>
-              <p>
-                You are NOT allowed to re-distribute Softy Pinko template on any
-                template collection websites. Thank you.
+              <p>Whether you have questions, feedback, or inquiries, we encourage you to reach out to us using the form below. </p><p> Our dedicated team is ready to respond promptly and assist you. </p> <p>We appreciate your communication and eagerly await the opportunity to connect with you.
               </p>
             </div>
           </div>
